src/objects/department__c.object
<CustomObject>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>departments</relationshipLabel>
        <relationshipName>departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dept_name__c</fullName>
        <label>dept name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>doj__c</fullName>
        <label>doj</label>
        <summarizedField>employees__c.doj__c</summarizedField>
        <summaryForeignKey>employees__c.department__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>emps__c</fullName>
        <label>emps</label>
        <summaryForeignKey>employees__c.department__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>location__c</fullName>
        <label>location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noemps__c</fullName>
        <label>noemps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>salary__c</fullName>
        <label>salary</label>
        <summarizedField>employees__c.salary__c</summarizedField>
        <summaryForeignKey>employees__c.department__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>d-{000}</displayFormat>
        <label>dept no</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>